fix overflow mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -738,7 +738,9 @@ label.error {
   a.logo img {
     width: calc(100vw * 628 / 1920);
   }
-
+  #implement-progress .learn-more {
+    font-size: 20px;
+  }
   .banner .price-img {
     width: calc(100vw * 1440 / 1920);
   }
